Expérience : GridWorld, ANIRL, Parfait
 : make ANIRL_Exp2
 dans le dossier racine pour effectuer l'expérience.

 On trouve epsilon_ANIRL = 0.03 et T_ANIRL = 170
 L'expérience est un succès.

 Le code est assez sale : il faut passer de C à python et retour, les conventions sur les index sont notamment assez précaires. Il faudrait nettoyer tout ça... un jour...

--- a/Makefile.org
+++ b/Makefile.org
@@ -183,6 +183,17 @@ threshold.tex:
 ANIRL_Exp1:
 	make -C InvertedPendulum ANIRL_Exp1
     #+end_src
+   - ANIRL_Exp2 (GridWorld)
+    #+begin_src makefile :tangle Makefile
+ANIRL_Exp2:
+	make -C GridWorld ANIRL_Exp2
+    #+end_src
+   - ANIRL_Exp2_test1 (GridWorld)
+    #+begin_src makefile :tangle Makefile
+ANIRL_Exp2_test1:
+	make -C GridWorld ANIRL_Exp2_test1
+    #+end_src
+    
 ** Previous results
    - lagoudakis2003least_figure10.pdf (ChainWalk)
     #+begin_src makefile :tangle Makefile
