--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -10,6 +10,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<LAFEM_Exp1_make>>
 <<LSTDmu_Exp_make>>
 <<TT_Exp1_make>>
+<<ANIRL_Exp2_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -46,7 +47,8 @@ O2EXE=gcc $(LFLAGS)
 <<Generator_clean_make>>
 <<Simulator_clean_make>>
 <<TT_Exp1_clean_make>>
-clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean
+<<ANIRL_Exp2_clean_make>>
+clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean
 
 <<LSTDmu_Exp_nuke_make>>
     #+end_src
