--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -11,6 +11,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<LSTDmu_Exp_make>>
 <<TT_Exp1_make>>
 <<ANIRL_Exp2_make>>
+<<LSPI_Exp1_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -48,7 +49,8 @@ O2EXE=gcc $(LFLAGS)
 <<Simulator_clean_make>>
 <<TT_Exp1_clean_make>>
 <<ANIRL_Exp2_clean_make>>
-clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean
+<<LSPI_Exp1_clean_make>>
+clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean
 
 <<LSTDmu_Exp_nuke_make>>
     #+end_src
