--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -12,6 +12,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<TT_Exp1_make>>
 <<ANIRL_Exp2_make>>
 <<LSPI_Exp1_make>>
+<<ANIRL_Exp3_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -49,8 +50,9 @@ O2EXE=gcc $(LFLAGS)
 <<Simulator_clean_make>>
 <<TT_Exp1_clean_make>>
 <<ANIRL_Exp2_clean_make>>
+<<ANIRL_Exp3_clean_make>>
 <<LSPI_Exp1_clean_make>>
-clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean
+clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean ANIRL_Exp3_clean
 
 <<LSTDmu_Exp_nuke_make>>
     #+end_src
