Echec de l'expérience GridWorld, SCIRL, Dégradé
LSTDmu est employé pour calculer mu_E(s,a) et ce n'est pas forcément un choix heureux. Si on augmente la quantité de données venant de l'expert (ligne 100 de ANIRL_Exp3.org) (jusqu'à 100 ou 1000 trajectoires) alors cela foncitonne (de fait on peut exclure un bug). Mais si on met une seule trajectoire, comme pour ANIRL, alors la récompense trouvée est toute bidon là où l'expert n'est pas passé, et ça pose de sérieux problèmes au niveau de la politique.

Je vais essayer d'implémenter le Monte-Carlo heuristique mentionné par Matthieu afin de contourner ce problème et faire marcher SCIRL avec une seule trajectoire de l'expert.

Le truc, c'est que les features discretes (0 partout et 1 à l'index correspondant à l'état) font que l'estimation "off policy d'une action" de mu par LSTDmu est vraiment pas terrible.

--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -13,10 +13,11 @@ Those who do not fit in the others categories (because they fit in more than one
 <<ANIRL_Exp2_make>>
 <<LSPI_Exp1_make>>
 <<ANIRL_Exp3_make>>
+<<SCIRL_Exp1_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs  >/dev/null 2>/dev/null
 
 <<LAFEM_Exp1_code_make>>
 <<LSTDmu_Exp_code_make>>
@@ -52,7 +53,8 @@ O2EXE=gcc $(LFLAGS)
 <<ANIRL_Exp2_clean_make>>
 <<ANIRL_Exp3_clean_make>>
 <<LSPI_Exp1_clean_make>>
-clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean ANIRL_Exp3_clean
+<<SCIRL_Exp1_clean_make>>
+clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean ANIRL_Exp3_clean SCIRL_Exp1_clean
 
 <<LSTDmu_Exp_nuke_make>>
     #+end_src
