--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -14,7 +14,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs  >/dev/null 2>/dev/null
   #+end_src
 ** C source to .o file
   #+begin_src make :tangle Makefile :noweb yes
