--- a/Makefile.org
+++ b/Makefile.org
@@ -26,7 +26,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs >/dev/null 2>/dev/null
 
 <<LSPI_code_make>>
 <<LSTDQ_code_make>>
@@ -202,6 +202,11 @@ LSPI_Exp1:
     #+begin_src makefile :tangle Makefile
 ANIRL_Exp3:
 	make -C GridWorld ANIRL_Exp3
+    #+end_src
+   - SCIRL_Exp1 (GridWorld)
+    #+begin_src makefile :tangle Makefile
+SCIRL_Exp1:
+	make -C GridWorld SCIRL_Exp1
     #+end_src
     
 ** Previous results
