Expérience : Pendule, ANIRL, Dégradé
Comme attendu, ANIRL ne parvient pas à contrôler le pendule.
 : make ANIRL_Exp4
 dans le dossier racine pour lancer l'expérience.

On pourrait reproduire le résultat publié dans klein2011batch en donnant des samples à LSPI, mais je garde ça sous le coude pour plus tard, c'est pas super utile en ce moment.

--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -80,6 +80,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<LAFEM_Exp7_make>>
 <<MCLength_make>>
 <<ANIRL_Exp1_make>>
+<<ANIRL_Exp4_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -121,7 +122,8 @@ O2EXE=gcc $(LFLAGS)
 <<LAFEM_Exp5_clean_make>>
 <<MCLength_clean_make>>
 <<ANIRL_Exp1_clean_make>>
-clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean LAFEM_Exp4_clean LAFEM_Exp5_clean MCLength_clean ANIRL_Exp1_clean
+<<ANIRL_Exp4_clean_make>>
+clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean LAFEM_Exp4_clean LAFEM_Exp5_clean MCLength_clean ANIRL_Exp1_clean ANIRL_Exp4_clean
 
     #+end_src
 
