Expérience : Highway, SCIRL, Dégradé
 : make SCIRL_Exp3

L'expérience est un succès, on arrive à la même valeur en l'état initial que l'expert.

Une trajectoire est suffisante, il faudrait refaire l'expérience en faisant varier le nombre de samples de cette trajectoire et constater l'évolution avec des barres d'erreur.

--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -6,6 +6,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+begin_src makefile :tangle Makefile :noweb yes
 <<Highway_make>>
 <<SCIRL_Exp2_make>>
+<<SCIRL_Exp3_make>>
 <<ANIRL_Exp5_make>>
   #+end_src
 ** Code extraction
@@ -27,9 +28,10 @@ O2EXE=gcc $(LFLAGS)
     #+begin_src makefile :tangle Makefile :noweb yes
 <<Highway_clean_make>>
 <<SCIRL_Exp2_clean_make>>
+<<SCIRL_Exp3_clean_make>>
 <<ANIRL_Exp5_clean_make>>
 
-clean: Highway_clean SCIRL_Exp2_clean ANIRL_Exp5_clean
+clean: Highway_clean SCIRL_Exp2_clean ANIRL_Exp5_clean SCIRL_Exp3_clean
 	find . -maxdepth 1 -iname "*~"   | xargs $(XARGS_OPT) rm
 
     #+end_src
