--- a/Makefile.org
+++ b/Makefile.org
@@ -225,6 +225,11 @@ SCIRL_Exp1:
 SCIRL_Exp2:
 	make -C Highway SCIRL_Exp2
     #+end_src
+   - SCIRL_Exp3 (Highway)
+    #+begin_src makefile :tangle Makefile
+SCIRL_Exp3:
+	make -C Highway SCIRL_Exp3
+    #+end_src
     
 ** Previous results
    - lagoudakis2003least_figure10.pdf (ChainWalk)
