Expérience : Highway, ANIRL, Dégradé
 : make ANIRL_Exp6

ANIRL fonctionne, mais prend plus de temps, et surtout on lui a donné des features de derrière les fagots. C'est la dernière expérience du protocole. "Yapuka" publier.

--- a/Makefile.org
+++ b/Makefile.org
@@ -203,7 +203,7 @@ ANIRL_Exp5:
    - ANIRL_Exp6 (Highway)
     #+begin_src makefile :tangle Makefile
 ANIRL_Exp6:
-	make -C Highway ANIRL_Exp6_LSPI
+	make -C Highway ANIRL_Exp6
     #+end_src
    - ANIRL_Exp2_test1 (GridWorld)
     #+begin_src makefile :tangle Makefile
