Tentative d'implémentation de l'algo de cascading, encore non testée.

--- a/Makefile.org
+++ b/Makefile.org
@@ -45,6 +45,7 @@ tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs >/de
 <<criteria_code_make>>
 <<greedy_code_make>>
 <<NA_code_make>>
+<<Cascading_code_make>>
   #+end_src
 ** C source to .o file
 
