--- a/Makefile.org
+++ b/Makefile.org
@@ -236,6 +236,14 @@ SCIRL_Exp2:
 SCIRL_Exp3:
 	make -C Highway SCIRL_Exp3
     #+end_src
+   - Cascading_Exp1 (Highway)
+    #+begin_src makefile :tangle Makefile
+Cascading_Exp1:
+	make -C Highway Cascading_Exp1
+Cascading_Exp1b:
+	make -C Highway Cascading_Exp1b
+
+    #+end_src
     
 ** Previous results
    - lagoudakis2003least_figure10.pdf (ChainWalk)
