--- a/Makefile.org
+++ b/Makefile.org
@@ -61,7 +61,7 @@ o2exe=gcc $(LFLAGS)
   #+end_src
 ** Cleaning
     #+begin_src makefile :tangle Makefile :noweb yes
-export XARGS_OPT=-t
+export XARGS_OPT=-tr
 <<LSPI_clean_make>>
 <<LSTDQ_clean_make>>
 <<LSTDmu_clean_make>>
