--- a/Makefile.org
+++ b/Makefile.org
@@ -261,6 +261,11 @@ Cascading_Exp1:
 Cascading_Exp2:
 	make -C GridWorld Cascading_Exp2
     #+end_src
+   - Cascad1ing_Exp3 (GridWorld)
+    #+begin_src makefile :tangle Makefile
+Cascading_Exp3:
+	make -C GridWorld Cascading_Exp3
+    #+end_src
     
 *** Previous results
    - lagoudakis2003least_figure10.pdf (ChainWalk)
