--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -15,6 +15,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<ANIRL_Exp3_make>>
 <<SCIRL_Exp1_make>>
 <<Cascading_Exp2_make>>
+<<Cascading_Exp3_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -56,7 +57,8 @@ O2EXE=gcc $(LFLAGS)
 <<LSPI_Exp1_clean_make>>
 <<SCIRL_Exp1_clean_make>>
 <<Cascading_Exp2_clean_make>>
-clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean ANIRL_Exp3_clean SCIRL_Exp1_clean Cascading_Exp2_clean
+<<Cascading_Exp3_clean_make>>
+clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulator_clean TT_Exp1_clean ANIRL_Exp2_clean LSPI_Exp1_clean ANIRL_Exp3_clean SCIRL_Exp1_clean Cascading_Exp2_clean Cascading_Exp3_clean
 
 <<LSTDmu_Exp_nuke_make>>
     #+end_src
