--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -81,6 +81,8 @@ Those who do not fit in the others categories (because they fit in more than one
 <<MCLength_make>>
 <<ANIRL_Exp1_make>>
 <<ANIRL_Exp4_make>>
+<<Cascading_Exp4_make>>
+<<InvertedPendulum_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -123,7 +125,9 @@ O2EXE=gcc $(LFLAGS)
 <<MCLength_clean_make>>
 <<ANIRL_Exp1_clean_make>>
 <<ANIRL_Exp4_clean_make>>
-clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean LAFEM_Exp4_clean LAFEM_Exp5_clean MCLength_clean ANIRL_Exp1_clean ANIRL_Exp4_clean
+<<Cascading_Exp4_clean_make>>
+<<Generator_make>>
+clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean LAFEM_Exp4_clean LAFEM_Exp5_clean MCLength_clean ANIRL_Exp1_clean ANIRL_Exp4_clean Cascading_Exp4_clean
 
     #+end_src
 
