--- a/Makefile.org
+++ b/Makefile.org
@@ -266,6 +266,11 @@ Cascading_Exp2:
 Cascading_Exp3:
 	make -C GridWorld Cascading_Exp3
     #+end_src
+   - Cascad1ing_Exp4 (InvertedPendulum)
+    #+begin_src makefile :tangle Makefile
+Cascading_Exp4:
+	make -C InvertedPendulum Cascading_Exp4
+    #+end_src
     
 *** Previous results
    - lagoudakis2003least_figure10.pdf (ChainWalk)
