LAFEM_Exp3: Ne fonctionne plus
Je vais tenter de retrouver les résultats de SCIRL parfait, et éventuellement d'isoler le bug qui manifestement s'est glissé là dedans

--- a/Makefile.org
+++ b/Makefile.org
@@ -129,7 +129,7 @@ LAFEM_Exp2:
    - LAFEM_Exp3 (InvertedPendulum)
     #+begin_src makefile :tangle Makefile
 LAFEM_Exp3:
-	make -C InvertedPendulum LAFEM_Exp3_true_R.pdf LAFEM_Exp3_lafem_R.pdf LAFEM_Exp3_Vexpert.pdf LAFEM_Exp3_Vagent.pdf
+	make -C InvertedPendulum LAFEM_Exp3
     #+end_src
    - LAFEM_Exp4 (InvertedPendulum)
     #+begin_src makefile :tangle Makefile
