--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -10,6 +10,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<ANIRL_Exp5_make>>
 <<ANIRL_Exp6_make>>
 <<Cascading_Exp1_make>>
+<<Cascading_Exp5_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -34,8 +35,9 @@ O2EXE=gcc $(LFLAGS)
 <<ANIRL_Exp5_clean_make>>
 <<ANIRL_Exp6_clean_make>>
 <<Cascading_Exp1_clean_make>>
+<<Cascading_Exp5_clean_make>>
 
-clean: Highway_clean SCIRL_Exp2_clean ANIRL_Exp5_clean SCIRL_Exp3_clean ANIRL_Exp6_clean Cascading_Exp1_clean
+clean: Highway_clean SCIRL_Exp2_clean ANIRL_Exp5_clean SCIRL_Exp3_clean ANIRL_Exp6_clean Cascading_Exp1_clean Cascading_Exp5_clean
 	find . -maxdepth 1 -iname "*~"   | xargs $(XARGS_OPT) rm
 
     #+end_src
