Tangling code is now done thanks to a non emacs tangling script

--- a/GridWorld/Makefile
+++ b/GridWorld/Makefile
@@ -1,4 +1,4 @@
 .PHONY: Makefile
 Makefile:
-	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
+	cat *.org > All.org; tangle All.org; rm All.org
 
