--- a/ChainWalk/Makefile.org
+++ b/ChainWalk/Makefile.org
@@ -11,7 +11,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=tangle $1
 
 <<Generator_code_make>>
 <<lagoudakis2003least_figure10_code_make>>
