--- a/ChainWalk/Makefile.org
+++ b/ChainWalk/Makefile.org
@@ -11,7 +11,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=tangle $1
 
 <<Generator_code_make>>
 <<lagoudakis2003least_figure10_code_make>>
@@ -45,5 +45,5 @@ clean: Generator_clean lagoudakis2003least_figure10_clean
 
    #+begin_src makefile :tangle Makefile :noweb yes
 Makefile:
-	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
+	cat *.org > All.org; tangle All.org; rm All.org
    #+end_src
