--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -13,7 +13,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=tangle $1
 
 <<LAFEM_Exp1_code_make>>
 <<LSTDmu_Exp_code_make>>
@@ -56,5 +56,5 @@ clean: GridWorld_clean LAFEM_Exp1_clean LSTDmu_Exp_clean Generator_clean Simulat
    #+begin_src makefile :tangle Makefile :noweb yes
 
 Makefile:
-	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
+	cat *.org > All.org; tangle All.org; rm All.org
    #+end_src
