--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -14,7 +14,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=tangle $1
   #+end_src
 ** C source to .o file
   #+begin_src make :tangle Makefile :noweb yes
@@ -46,5 +46,5 @@ clean: SCIRL_clean Comparison_clean Simulator_clean MWAL_clean Main_clean Random
 
    #+begin_src makefile :tangle Makefile :noweb yes
 Makefile:
-	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
+	cat *.org > All.org; tangle All.org; rm All.org
    #+end_src
