--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -81,7 +81,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
-tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+tangle=tangle $1
 
 <<Generator_code_make>>
 <<InvertedPendulum_code_make>>
@@ -126,5 +126,5 @@ clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean L
 
    #+begin_src makefile :tangle Makefile :noweb yes
 Makefile:
-	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
+	cat *.org > All.org; tangle All.org; rm All.org
    #+end_src
