--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -29,14 +29,21 @@ O2EXE=gcc $(LFLAGS)
 
 ** Cleaning
     #+begin_src makefile :tangle Makefile :noweb yes
+<<SCIRL_Exp2_clean_make>>
 <<SCIRL_clean_make>>
+<<Cascading_Exp1_clean_make>>
+<<Cascading_Exp5_clean_make>>
+<<SCIRL_Exp3_clean_make>>
+<<ANIRL_Exp5_clean_make>>
+<<ANIRL_Exp6_clean_make>>
+<<Highway_clean_make>>
 <<Simulator_clean_make>>
 <<Comparison_clean_make>>
 <<MWAL_clean_make>>
 <<Main_clean_make>>
 <<RandomSamples_clean_make>>
 
-clean: SCIRL_clean Comparison_clean Simulator_clean MWAL_clean Main_clean RandomSamples_clean
+clean: SCIRL_clean Cascading_Exp1_clean Cascading_Exp5_clean SCIRL_Exp2_clean SCIRL_Exp3_clean Comparison_clean Simulator_clean MWAL_clean Main_clean RandomSamples_clean ANIRL_Exp5_clean ANIRL_Exp6_clean Highway_clean
 	find . -maxdepth 1 -iname "*~"   | xargs $(XARGS_OPT) rm
 
     #+end_src
