Make -B Makefile and make clean now do their jobs

--- a/klein2012structured_NIPS/Makefile
+++ b/klein2012structured_NIPS/Makefile
@@ -6,4 +6,9 @@ scirl_nips_cr.pdf : scirl_nips_cr.tex
 	pdflatex scirl_nips_cr.tex 
 	pdflatex scirl_nips_cr.tex 
 clean:
-	rm  scirl_nips_cr.pdf *.log *.out *.aux *.bbl *.blg
+	find . -maxdepth 1 -iname "scirl_nips_cr.pdf"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "*.log"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "*.out"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "*.aux"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "*.bbl"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "*.blg"   | xargs $(XARGS_OPT) rm
