--- a/Highway/Makefile.org
+++ b/Highway/Makefile.org
@@ -40,10 +40,9 @@ O2EXE=gcc $(LFLAGS)
 <<Simulator_clean_make>>
 <<Comparison_clean_make>>
 <<MWAL_clean_make>>
-<<Main_clean_make>>
 <<RandomSamples_clean_make>>
 
-clean: SCIRL_clean Cascading_Exp1_clean Cascading_Exp5_clean SCIRL_Exp2_clean SCIRL_Exp3_clean Comparison_clean Simulator_clean MWAL_clean Main_clean RandomSamples_clean ANIRL_Exp5_clean ANIRL_Exp6_clean Highway_clean
+clean: SCIRL_clean Cascading_Exp1_clean Cascading_Exp5_clean SCIRL_Exp2_clean SCIRL_Exp3_clean Comparison_clean Simulator_clean MWAL_clean RandomSamples_clean ANIRL_Exp5_clean ANIRL_Exp6_clean Highway_clean
 	find . -maxdepth 1 -iname "*~"   | xargs $(XARGS_OPT) rm
 
     #+end_src
