--- a/piot2012cascading/Makefile
+++ b/piot2012cascading/Makefile
@@ -1,6 +1,6 @@
 all:main.pdf
 
-ECML13_cascading.pdf: ECML13_cascading.tex Biblio.bib Fig3.pdf
+ECML13_cascading.pdf: ECML13_cascading.tex Biblio.bib #Fig1-NoX.pdf Fig2-ClassifAndUs.pdf Fig3-SCIRLAndUs.pdf Fig4-Legend.pdf
 	pdflatex -interaction=batchmode ECML13_cascading.tex && bibtex ECML13_cascading && pdflatex -interaction=batchmode ECML13_cascading.tex && pdflatex -interaction=batchmode ECML13_cascading.tex 
 
 RTEcompile:
@@ -17,14 +17,14 @@ RTEstopView:
 
 
 
-Fig1.pdf: Fig2.pdf
+Fig1-NoX.pdf: 4plots
 
-Fig2.pdf: ANIRL_Exp3.mat Cascading_Exp3.mat GridWorld_plot.py
-	python GridWorld_plot.py
+Fig2-ClassifAndUs.pdf: 4plots
 
-Fig3.pdf: Cascading_Exp5.mat Highway_plot.py
-	python Highway_plot.py
+Fig3-SCIRLAndUs.pdf: 4plots
 
-Legend.pdf: Cascading_Exp5.mat Legend_plot.py
-	python Legend_plot.py
+Fig4-Legend.pdf: 4plots
+
+4plots: Cascading_Exp5.mat SCIRL_Exp3.mat 4plots.py
+	python 4plots.py
 
