--- a/Manuscrit/Makefile
+++ b/Manuscrit/Makefile
@@ -1,6 +1,7 @@
 org2pdf=python3 ForC_parser.py $1.org > tmp.org && emacs -batch --visit tmp.org --funcall org-export-as-latex --script ~/.emacs && pdflatex tmp.tex && bibtex tmp && makeglossaries tmp && pdflatex tmp.tex && pdflatex tmp.tex && pdflatex tmp.tex && pdflatex tmp.tex && mv tmp.pdf main.pdf
 
-
+#FIXME: Faire planter bibtex en cas de warning
+#FIXME: Faire planter ForC en cas d'erreur de lexage ou parsage
 show: main.pdf
 	open main.pdf
 
