Slides pour JFPDA

--- a/piot2012cascading_ECML/Makefile
+++ b/piot2012cascading_ECML/Makefile
@@ -4,5 +4,11 @@ default:
 	pdflatex Cascading.tex
 	pdflatex Cascading.tex
 
+slides.pdf:slides.org
+	emacs -batch --visit slides.org --funcall org-export-as-latex --script ~/.emacs
+	pdflatex slides.tex
+	pdflatex slides.tex
+
+
 clean:
 	rm -f *~ *.aux *.blg *.bbl *.log
